@@ -1118,6 +1118,9 @@ initpycurl(void)
 #ifdef HAVE_CURLOPT_CERTINFO
     insint_c(d, "INFO_CERTINFO", CURLINFO_CERTINFO);
 #endif
+#ifdef HAVE_CURL_7_19_4_OPTS
+    insint_c(d, "CONDITION_UNMET ", CURLINFO_CONDITION_UNMET );
+#endif
 
     /* CURLPAUSE: symbolic constants for pause(bitmask) */
     insint_c(d, "PAUSE_RECV", CURLPAUSE_RECV);
